--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SetInterval</title>
+    <title>Stop BG</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
